--- a/app/static/css/actions.css
+++ b/app/static/css/actions.css
@@ -227,10 +227,10 @@ button:disabled {
     padding-left: 20px;
 }
 
-.can-afford {
+.afford {
     box-shadow: 0px 0px 10px 5px green;
 }
 
-.cannot-afford {
+.not-afford {
     box-shadow: 0px 0px 10px 5px red;
 }
